# comfyui-client

./: .gitignore  DESIGN.md  LICENSE  README.md  flake.nix  pyproject.toml
.flox/: .gitignore  env.json
.flox/cache/: upgrade-checks.json
.flox/env/: .gitignore  manifest.toml
.flox/log/: watchdog.8632fb2a.log.2026-02-21
.flox/pkgs/: comfyui-scripts.nix
.flox/run/: x86_64-linux.build-comfyui-client.dev  x86_64-linux.build-comfyui-client.run
examples/: README.md  batch-prompts.json  demo-advanced.sh  demo-batch.sh  demo-flux-creative.sh  demo-flux-fast.sh  demo-flux-quality.sh  demo-flux.sh  demo-monitoring.sh  demo-parallel.sh  demo-simple.sh  demo-variations.sh
pkgs/: comfyui-scripts.nix
src/comfyui_client/: __init__.py  cli.py  client.py  conversion.py  metadata.py  server.py  templates.py  watcher.py  webhooks.py  workflow.py
workflows/templates/flux/: img2img.py  inpaint.py  txt2img.py  upscale.py
workflows/templates/sd15/: img2img.py  inpaint.py  txt2img.py  upscale.py
workflows/templates/sd35/: img2img.py  inpaint.py  txt2img.py  upscale.py
workflows/templates/sdxl/: img2img.py  inpaint.py  txt2img.py  upscale.py
