[project]
name = "comfyui-client"
version = "0.1.0"
description = "CLI client for ComfyUI API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
comfyui-submit = "comfyui_client.cli:submit_cli"
comfyui-queue = "comfyui_client.cli:queue_cli"
comfyui-result = "comfyui_client.cli:result_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
