[project]
name = "comfyui-client"
version = "0.7.0"
description = "CLI client for ComfyUI API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
comfyui-submit = "comfyui_client.cli:submit_cli"
comfyui-queue = "comfyui_client.cli:queue_cli"
comfyui-result = "comfyui_client.cli:result_cli"
comfyui-batch = "comfyui_client.cli:batch_cli"
comfyui-cancel = "comfyui_client.cli:cancel_cli"
comfyui-status = "comfyui_client.cli:status_cli"
comfyui-models = "comfyui_client.cli:models_cli"
comfyui-info = "comfyui_client.cli:info_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
